ec-pascal/Examples/bad/Example1.pas
Program Example1;
Begin
	Write('Hello World. Prepare to learn PASCAL!!');
	Readln;
End.
